--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,17 @@
     "ext-mbstring": "*"
   },
   "autoload": {
-    "psr-4": { "Offchaindata\\" : "lib/" }
+    "psr-4": {
+      "Offchaindata\\": "lib/"
+    }
   },
   "autoload-dev": {
-    "psr-4": { "Offchaindata\\" : "test/" }
+    "psr-4": {
+      "Tests\\": "tests/"
+    }
   },
   "require-dev": {
-    "phpunit/phpunit": "^8.5"
+    "php": ">=7.2",
+    "phpunit/phpunit": "^8.0"
   }
 }
