--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,14 @@
   "license": "Apache-2.0",
   "require": {
     "php": ">=5.5",
+    "guzzlehttp/guzzle": "^6.5",
     "ext-curl": "*",
     "ext-json": "*",
     "ext-mbstring": "*"
+  },
+  "require-dev": {
+    "php": ">=7.2",
+    "phpunit/phpunit": "^8.0"
   },
   "autoload": {
     "psr-4": {
@@ -24,9 +29,5 @@
     "psr-4": {
       "Tests\\": "tests/"
     }
-  },
-  "require-dev": {
-    "php": ">=7.2",
-    "phpunit/phpunit": "^8.0"
   }
 }
